# opengles3-book

./: .gitignore
Common/: CMakeLists.txt  build.gradle
Common/Android/: AndroidManifest.xml
Common/Source/Android/: esUtil_Android.c
